<resources>
    <string name="app_name">EasyWriter</string>

    <string name="album">相册</string>
    <string name="camera">相机</string>

    <!--    提示语句-->
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
    <string name="delete">删除</string>
    <string name="wait">稍等片刻~</string>
    <string name="word">&#160;字</string>

    <!--    设置-->

    <string name="header_img">头像</string>
    <string name="name">昵称</string>
    <string name="sign">签名</string>
    <string name="lock">指纹锁</string>
</resources>