<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.me.SettingActivity">

    <FrameLayout
        android:id="@+id/setting_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            
            android:layout_marginLeft="16dp"
            android:id="@+id/setting_toolbar_left"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:src="@mipmap/back_black"></ImageView>

        <TextView
            android:layout_gravity="center"
            android:id="@+id/setting_toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="设置"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20dp"></TextView>
    </FrameLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setting_toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:background="@drawable/rectangle_white_round"
                android:id="@+id/setting_user_bg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    
                    android:id="@+id/setting_head"
                    android:layout_width="match_parent"
                    android:layout_height="60dp">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="16dp"
                        android:gravity="center"
                        android:text="@string/header_img"
                        android:textColor="@color/black"
                        android:textSize="16dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"></TextView>

                    <ImageView
                        android:id="@+id/setting_head_img"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_marginEnd="8dp"
                        android:src="@drawable/head_example"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/imageView2"
                        app:layout_constraintTop_toTopOf="parent"></ImageView>

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginEnd="16dp"
                        android:src="@mipmap/next_gray"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                    </ImageView>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    
                    android:id="@+id/setting_name"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    >

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="16dp"
                        android:gravity="center"
                        android:text="@string/name"
                        android:textColor="@color/black"
                        android:textSize="16dp"
                        app:layout_constraintStart_toStartOf="parent"></TextView>

                    <TextView
                        android:id="@+id/setting_name_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="8dp"
                        android:gravity="right"
                        android:maxLines="1"
                        android:text="Alice"
                        android:textColor="@color/gray"
                        android:textSize="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/imageView3"
                        app:layout_constraintStart_toEndOf="@+id/textView9"
                        app:layout_constraintTop_toTopOf="parent"></TextView>

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginEnd="16dp"
                        android:src="@mipmap/next_gray"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                    </ImageView>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/setting_words"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    >

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="16dp"
                        android:gravity="center"
                        android:text="@string/sign"
                        android:textColor="@color/black"
                        android:textSize="16dp"
                        app:layout_constraintStart_toStartOf="parent"></TextView>

                    <TextView
                        android:id="@+id/setting_words_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="48dp"
                        android:layout_marginEnd="8dp"
                        android:gravity="right"
                        android:text="唯纯粹与热爱不可辜负。"
                        android:textColor="@color/gray"
                        android:textSize="12dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/imageView4"
                        app:layout_constraintStart_toEndOf="@+id/textView11"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.39"></TextView>

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginEnd="16dp"
                        android:src="@mipmap/next_gray"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"></ImageView>
                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/setting_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/rectangle_white_round"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/setting_user_bg">

                <androidx.constraintlayout.widget.ConstraintLayout
                    
                    android:id="@+id/setting_home"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    >

                    <TextView
                        android:id="@+id/textView22"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="16dp"
                        android:gravity="center"
                        android:text="图文匹配设置"
                        android:textColor="@color/black"
                        android:textSize="16dp"
                        app:layout_constraintStart_toStartOf="parent"></TextView>


                    <ImageView
                        android:id="@+id/imageView23"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginEnd="16dp"
                        android:src="@mipmap/next_gray"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                    </ImageView>
                </androidx.constraintlayout.widget.ConstraintLayout>
                <androidx.constraintlayout.widget.ConstraintLayout
                    
                    android:id="@+id/setting_diary"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    >

                    <TextView
                        android:id="@+id/textView43"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="16dp"
                        android:gravity="center"
                        android:text="文章创作设置"
                        android:textColor="@color/black"
                        android:textSize="16dp"
                        app:layout_constraintStart_toStartOf="parent"></TextView>

                    <ImageView
                        android:id="@+id/imageView44"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginEnd="16dp"
                        android:src="@mipmap/next_gray"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                    </ImageView>
                </androidx.constraintlayout.widget.ConstraintLayout>
                <androidx.constraintlayout.widget.ConstraintLayout
                    
                    android:id="@+id/setting_note"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    >

                    <TextView
                        android:id="@+id/textView23"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="16dp"
                        android:gravity="center"
                        android:text="图文广场设置"
                        android:textColor="@color/black"
                        android:textSize="16dp"
                        app:layout_constraintStart_toStartOf="parent"></TextView>

                    <ImageView
                        android:id="@+id/imageView24"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginEnd="16dp"
                        android:src="@mipmap/next_gray"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                    </ImageView>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/setting_safe_bg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/rectangle_white_round"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/setting_main">

                <androidx.constraintlayout.widget.ConstraintLayout
                    
                    android:id="@+id/setting_lock"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    >

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="16dp"
                        android:gravity="center"
                        android:text="@string/lock"
                        android:textColor="@color/black"
                        android:textSize="16dp"
                        app:layout_constraintStart_toStartOf="parent"></TextView>


                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginEnd="16dp"
                        android:src="@mipmap/next_gray"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"></ImageView>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout

                    android:id="@+id/setting_account_safe"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    >

                    <TextView
                        android:id="@+id/textView100"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="16dp"
                        android:gravity="center"
                        android:text="账号安全"
                        android:textColor="@color/black"
                        android:textSize="16dp"
                        app:layout_constraintStart_toStartOf="parent"></TextView>


                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginEnd="16dp"
                        android:src="@mipmap/next_gray"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"></ImageView>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    
                    android:id="@+id/setting_backup"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="16dp"
                        android:gravity="center"
                        android:text="其它设置"
                        android:textColor="@color/black"
                        android:textSize="16dp"
                        app:layout_constraintStart_toStartOf="parent"></TextView>

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginEnd="16dp"
                        android:src="@mipmap/next_gray"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                    </ImageView>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>